--- a/bower.json
+++ b/bower.json
@@ -8,9 +8,17 @@
   ],
   "dependencies": {
     "purescript-prelude": "^2.4.0",
-    "purescript-console": "^2.0.0"
+    "purescript-console": "^2.0.0",
+    "purescript-pux": "^7.0.0",
+    "purescript-dom": "^3.5.1",
+    "purescript-eff": "^2.0.0",
+    "purescript-aff": "^2.0.3",
+    "purescript-maybe": "^2.0.1",
+    "purescript-arrays": "^3.2.1",
+    "purescript-unsafe-coerce": "^2.0.0"
   },
   "devDependencies": {
-    "purescript-psci-support": "^2.0.0"
+    "purescript-psci-support": "^2.0.0",
+    "purescript-pux-devtool": "^4.1.0"
   }
 }
